fix: change align in shopping cart

--- a/src/mainPage/containers/menu/menu.module.css
+++ b/src/mainPage/containers/menu/menu.module.css
@@ -138,8 +138,6 @@
 
 .showCart li {
     list-style-type: none;
-    text-align: left;
-    padding-left: 40%;
 }
 
 .shoppingCartTitle {
